--- a/JupyterNotebook.ipynb
+++ b/JupyterNotebook.ipynb
@@ -524,7 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Transforming the data using BoxCox\n",
+    "# Transforming the target using BoxCox\n",
     "fitted_price, fitted_lambda = sp.stats.boxcox(df.msrp)"
    ]
   },
@@ -649,10 +649,120 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transforming the target using BoxCox for each dataframe\n",
+    "y_train = sp.stats.boxcox(df_train.msrp.values, lmbda=fitted_lambda)\n",
+    "y_val = sp.stats.boxcox(df_val.msrp.values, lmbda=fitted_lambda)\n",
+    "y_test = sp.stats.boxcox(df_test.msrp.values, lmbda=fitted_lambda)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To avoid accidentally using the target later\n",
+    "del df_train['msrp']\n",
+    "del df_val['msrp']\n",
+    "del df_test['msrp']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'll implement the linear regression myself for this model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linear_regression(X, y):\n",
+    "    # Adding the dummy column\n",
+    "    ones = np.ones(X.shape[0])      # Create an array that contains only 1s\n",
+    "    X = np.column_stack([ones, X])  # Add the array of 1s as the first column of X\n",
+    "\n",
+    "    # Normal equation formula\n",
+    "    XTX = X.T.dot(X)                # Compute XtX\n",
+    "    XTX_inv = np.linalg.inv(XTX)    # Compute the inverse of XtX\n",
+    "    w = XTX_inv.dot(X.T).dot(y)     # Compute the rest of the normal equation\n",
+    "\n",
+    "    return w[0], w[1:]              # Split the weights vector into the bias and the rest of the weights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's start with some quantitative features\n",
+    "\n",
+    "- engine_hp\n",
+    "- engine_cylenders\n",
+    "- highway_mpg\n",
+    "- city_mpg\n",
+    "- popularity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"['engine_cylenders'] not in index\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [23], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Select the features from the data frame \u001b[39;00m\n\u001b[0;32m      2\u001b[0m base \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mengine_hp\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mengine_cylenders\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhighway_mpg\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcity_mpg\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpopularity\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m----> 3\u001b[0m df_num \u001b[38;5;241m=\u001b[39m \u001b[43mdf_train\u001b[49m\u001b[43m[\u001b[49m\u001b[43mbase\u001b[49m\u001b[43m]\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\User\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:2806\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2804\u001b[0m     \u001b[39mif\u001b[39;00m is_iterator(key):\n\u001b[0;32m   2805\u001b[0m         key \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(key)\n\u001b[1;32m-> 2806\u001b[0m     indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mloc\u001b[39m.\u001b[39;49m_get_listlike_indexer(key, axis\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m, raise_missing\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)[\u001b[39m1\u001b[39m]\n\u001b[0;32m   2808\u001b[0m \u001b[39m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[0;32m   2809\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(indexer, \u001b[39m\"\u001b[39m\u001b[39mdtype\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m) \u001b[39m==\u001b[39m \u001b[39mbool\u001b[39m:\n",
+      "File \u001b[1;32mc:\\Users\\User\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:1552\u001b[0m, in \u001b[0;36m_NDFrameIndexer._get_listlike_indexer\u001b[1;34m(self, key, axis, raise_missing)\u001b[0m\n\u001b[0;32m   1549\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   1550\u001b[0m     keyarr, indexer, new_indexer \u001b[39m=\u001b[39m ax\u001b[39m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[1;32m-> 1552\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_read_indexer(\n\u001b[0;32m   1553\u001b[0m     keyarr, indexer, o\u001b[39m.\u001b[39;49m_get_axis_number(axis), raise_missing\u001b[39m=\u001b[39;49mraise_missing\n\u001b[0;32m   1554\u001b[0m )\n\u001b[0;32m   1555\u001b[0m \u001b[39mreturn\u001b[39;00m keyarr, indexer\n",
+      "File \u001b[1;32mc:\\Users\\User\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:1646\u001b[0m, in \u001b[0;36m_NDFrameIndexer._validate_read_indexer\u001b[1;34m(self, key, indexer, axis, raise_missing)\u001b[0m\n\u001b[0;32m   1644\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mloc\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m raise_missing):\n\u001b[0;32m   1645\u001b[0m     not_found \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mset\u001b[39m(key) \u001b[39m-\u001b[39m \u001b[39mset\u001b[39m(ax))\n\u001b[1;32m-> 1646\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mnot_found\u001b[39m}\u001b[39;00m\u001b[39m not in index\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   1648\u001b[0m \u001b[39m# we skip the warning on Categorical/Interval\u001b[39;00m\n\u001b[0;32m   1649\u001b[0m \u001b[39m# as this check is actually done (check for\u001b[39;00m\n\u001b[0;32m   1650\u001b[0m \u001b[39m# non-missing values), but a bit later in the\u001b[39;00m\n\u001b[0;32m   1651\u001b[0m \u001b[39m# code, so we want to avoid warning & then\u001b[39;00m\n\u001b[0;32m   1652\u001b[0m \u001b[39m# just raising\u001b[39;00m\n\u001b[0;32m   1653\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (ax\u001b[39m.\u001b[39mis_categorical() \u001b[39mor\u001b[39;00m ax\u001b[39m.\u001b[39mis_interval()):\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"['engine_cylenders'] not in index\""
+     ]
+    }
+   ],
+   "source": [
+    "# Select the features from the data frame \n",
+    "base = ['engine_hp', 'engine_cylenders', 'highway_mpg', 'city_mpg', 'popularity']\n",
+    "df_num = df_train[base]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
